Fix scrollbar issue

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -40,6 +40,18 @@ button
 .cg-shapes
   height: 0 !important
 
+// fix chessground svg elements positioning and overflow
+.cg-wrap svg
+  overflow: hidden
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100% !important
+  pointer-events: none
+  z-index: 2
+  opacity: 0.6
+
 // Flash messages
 .flash-notice,
 .flash-alert
