--- a/app/assets/stylesheets/pages/homepage.sass
+++ b/app/assets/stylesheets/pages/homepage.sass
@@ -298,7 +298,6 @@
       display: block
       text-decoration: none
       color: inherit
-      margin-bottom: 20px
       transition: opacity 0.3s ease
 
     .quest-level
